--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 app/results/*
 !app/results/.gitkeep 
 
-
-
 __pycache__/
 *.py[cod]
 *$py.class
@@ -16,4 +14,6 @@ venv/
 ENV/ 
 env.bak/
 venv.bak/
+
+.DS_Store
 
